<resources>
    <string name="app_name">Afya</string>
    <string name="prompt_username">"Nom d'utilisateur"</string>
    <string name="prompt_email">"Email"</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="prompt_confirm_password">Confirmer mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_register_in">"S'inscrire"</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="invalid_username">Nom d\'utilisateur invalide</string>
    <string name="invalid_password">Le mot de passe doit avoir au moins 6 caractères</string>
    <string name="invalid_password_confirm">Les mots de passe doivent être les mêmes</string>
    <string name="register_text">"Vous n'avez pas de compte ?"</string>
    <string name="register_link">Inscrivez-vous</string>
    <string name="login_text">Vous avez déjà un compte ?</string>
    <string name="login_link">Connectez-vous</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_title">Connexion</string>
    <string name="register_title">Inscription</string>
    <string name="or">OU</string>
    <string name="logo_content_description">Afya</string>
    <string name="show_map">Afficher la carte</string>
    <string name="details">Details</string>
    <string name="date_sortie">Date : </string>
    <string name="heure_depart">Heure de départ : </string>
    <string name="heure_arrivee">Heure d\'arrivée : </string>
    <string name="lieu_depart">Lieu de départ : </string>
    <string name="distance_parcourue">Distance parcourue : </string>
    <string name="liste_etapes">Liste des étapes : </string>
    <string name="distance_format">%s km</string>
    <string name="sorties">Sorties</string>
    <string name="utilisateur">Utilisateur</string>
    <string name="commencer_session">Commencer session</string>
    <string name="mes_sorties">Mes sorties :</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="details_de_la_sortie">Détails de la sortie :</string>
    <string name="se_deconnecter">Se déconnecter</string>
    <string name="map">Map :</string>
    <string name="save">Enregistrer</string>
    <string name="enter_start_position">Entrer position de départ</string>
</resources>